[gd_scene load_steps=13 format=3 uid="uid://dthben3iqn3fg"]

[ext_resource type="Script" uid="uid://dorc4k6mrvu0x" path="res://scripts/NPCs/cookie.gd" id="1_5fetn"]
[ext_resource type="Texture2D" uid="uid://cfqcrnogt5vg5" path="res://assets/01_Sprites/05_Other/talk_icon.png" id="2_5fetn"]
[ext_resource type="Texture2D" uid="uid://cm65ghci8ioue" path="res://assets/01_Sprites/01_Characters/Cookie/Cookie_apron.png" id="2_v3s4f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fa4jt"]
atlas = ExtResource("2_v3s4f")
region = Rect2(576, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkueg"]
atlas = ExtResource("2_v3s4f")
region = Rect2(608, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6jr2"]
atlas = ExtResource("2_v3s4f")
region = Rect2(640, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hbkw"]
atlas = ExtResource("2_v3s4f")
region = Rect2(672, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx2sy"]
atlas = ExtResource("2_v3s4f")
region = Rect2(704, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mntor"]
atlas = ExtResource("2_v3s4f")
region = Rect2(736, 64, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qis5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa4jt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkueg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6jr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hbkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx2sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mntor")
}],
"loop": false,
"name": &"Idle",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54lhc"]
size = Vector2(32, 46)

[sub_resource type="CircleShape2D" id="CircleShape2D_bfdoy"]
radius = 61.0082

[node name="Cookie" type="CharacterBody2D"]
script = ExtResource("1_5fetn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4qis5")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_54lhc")

[node name="InteractZone" type="Area2D" parent="CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/InteractZone"]
shape = SubResource("CircleShape2D_bfdoy")

[node name="TalkIcon" type="Sprite2D" parent="."]
visible = false
z_index = 5
position = Vector2(0, -23)
texture = ExtResource("2_5fetn")

[connection signal="body_entered" from="CollisionShape2D/InteractZone" to="." method="_on_interact_zone_body_entered"]
[connection signal="body_exited" from="CollisionShape2D/InteractZone" to="." method="_on_interact_zone_body_exited"]
